# FromSoftware_Fallen-Input

./: Cargo.toml  README.md
.github/workflows/: build-on-push.yml  manual-release.yml
src/: lib.rs  window.rs
